--- a/lord-of-the-rings/src/App.css
+++ b/lord-of-the-rings/src/App.css
@@ -17,10 +17,10 @@
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 20px;
   color: white;
 }
 
@@ -38,12 +38,5 @@
 }
 
 .image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-}
-
-.text {
-  text-align: center;
+  height: 30%;
 }
